--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <name>Camunda 8 Playground Norman</name>
@@ -12,14 +12,14 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.1.3</version>
+    <version>3.2.5</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
   <properties>
     <java.version>17</java.version>
-    <spring-zeebe.version>8.3.1</spring-zeebe.version>
-    <zeebe.version>8.3.1</zeebe.version>
+    <spring-zeebe.version>8.5.5</spring-zeebe.version>
+    <zeebe.version>8.5.5</zeebe.version>
   </properties>
 
   <dependencies>
@@ -41,8 +41,8 @@
     </dependency>
 
     <dependency>
-      <groupId>io.camunda</groupId>
-      <artifactId>spring-zeebe-starter</artifactId>
+      <groupId>io.camunda.spring</groupId>
+      <artifactId>spring-boot-starter-camunda</artifactId>
       <version>${spring-zeebe.version}</version>
     </dependency>
 
@@ -50,7 +50,7 @@
       <groupId>org.springdoc</groupId>
       <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
       <version>2.2.0</version>
-   </dependency>
+    </dependency>
 
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
@@ -63,10 +63,39 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-webflux</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.18.22</version>
+      <version>1.18.30</version>
       <scope>compile</scope>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
+    <dependency>
+      <groupId>com.github.javafaker</groupId>
+      <artifactId>javafaker</artifactId>
+      <version>1.0.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+      <version>2.4.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-aop</artifactId>
+      <version>2.4.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.github.resilience4j</groupId>
+      <artifactId>resilience4j-spring-boot3</artifactId>
+      <version>2.1.0</version>
     </dependency>
 
   </dependencies>
@@ -98,7 +127,7 @@
       <!-- use Java 17 dependencies if available -->
       <id>jdk17+</id>
       <activation>
-          <jdk>[17,)</jdk>
+        <jdk>[17,)</jdk>
       </activation>
       <dependencies>
         <dependency>
@@ -115,26 +144,9 @@
           <version>${spring-zeebe.version}</version>
           <scope>test</scope>
         </dependency>
-      </dependencies>
-    </profile>
-    <profile>
-      <!-- use alternative dependencies if Java 17 is not available -->
-      <id>jdk8-16</id>
-      <activation>
-          <jdk>[8,17)</jdk>
-      </activation>
-      <dependencies>
         <dependency>
-          <!-- see: https://github.com/camunda/zeebe-process-test#testcontainers-jdk-8 -->
           <groupId>io.camunda</groupId>
-          <artifactId>zeebe-process-test-extension-testcontainer</artifactId>
-          <version>${zeebe.version}</version>
-          <scope>test</scope>
-        </dependency>
-        <dependency>
-          <!-- see: https://github.com/camunda-community-hub/spring-zeebe#writing-test-cases -->
-          <groupId>io.camunda</groupId>
-          <artifactId>spring-zeebe-test-testcontainer</artifactId>
+          <artifactId>spring-zeebe-test</artifactId>
           <version>${spring-zeebe.version}</version>
           <scope>test</scope>
         </dependency>
