--- a/src/main/resources/application-docker.yaml
+++ b/src/main/resources/application-docker.yaml
@@ -1,32 +1,33 @@
-camunda.client.mode=oidc
-cam
 camunda:
-client:
-mode: oidc
-tenant-ids:
-- <default>
-auth:
-oidc-type: keycloak
-issuer: http://localhost:18080/auth/realms/camunda-platform
-zeebe:
-enabled: true
-gateway-url: http://localhost:26500
-base-url: http://localhost:8080
-prefer-rest-over-grpc: false
-audience: zeebe-api
-operate:
-enabled: true
-base-url: http://localhost:8081
-audience: operate-api
-tasklist:
-enabled: true
-base-url: http://localhost:8082
-audience: tasklist-api
-optimize:
-enabled: true
-base-url: http://localhost:8083
-audience: optimize-api
-identity:
-enabled: true
-base-url: http://localhost:8084
-audience: identity-api
+  client:
+    mode: oidc
+    #tenant-ids:
+    #- <default>
+    auth:
+      client-id: zeebe
+      client-secret: zecret
+      oidc-type: keycloak
+      issuer: http://localhost:18080/auth/realms/camunda-platform
+  zeebe:
+    enabled: true
+    gateway-url: http://localhost:26500
+    base-url: http://localhost:8080
+    prefer-rest-over-grpc: false
+    audience: zeebe-api
+  operate:
+    enabled: true
+    base-url: http://localhost:8081
+    audience: operate-api
+  tasklist:
+    enabled: true
+    base-url: http://localhost:8082
+    audience: tasklist-api
+  optimize:
+    enabled: true
+    base-url: http://localhost:8083
+    audience: optimize-api
+  identity:
+    enabled: true
+    base-url: http://localhost:8084
+    audience: identity-api
+zeebe.client.security.plaintext: true
