--- a/src/main/resources/application-saas.yaml
+++ b/src/main/resources/application-saas.yaml
@@ -1,9 +1,9 @@
-# https://github.com/camunda-community-hub/spring-zeebe#configuring-camunda-platform-8-saas-connection
-# https://github.com/camunda-community-hub/spring-zeebe#additional-configuration-options
+# https://docs.camunda.io/docs/apis-tools/spring-zeebe-sdk/getting-started/
+# https://docs.camunda.io/docs/apis-tools/spring-zeebe-sdk/configuration/
 
 zeebe.client:
-cloud:
-region: bru-2
-clusterId: 80f6a7e8-1ba1-4fb5-b53c-a92976a05344
-clientId: mH2jqNpZZVGUma2htzMfz0t0mbUBteu7
-clientSecret: gcw1LSidDieTeD3hUkJD5aTdJ3wYVxbFyyaWOl8b-UK3~LVx-Z59Eyc996oT0ROt
+  cloud:
+    region: bru-2
+    clusterId: 80f6a7e8-1ba1-4fb5-b53c-a92976a05344
+    clientId: dMX_fIpzQpR5PNCaLD4IKPsxRFJjRKwJ
+    clientSecret: vmDAz_7pRAIcIX245PILj3LoaBh45~DN6w~A1T0iAoJ.7B.fF_OMd7BizVzzzUaW
